# Finite_Diffs_Diffusion

./: CMakeLists.txt  Calculator.cpp  Calculator.h  INPUT.txt  IO.cpp  IO.h  main.cpp
